src/test/resources/fails/exc2.s
// No main function defined
compile nios-ii de0
stuff:
    r0 = r0 + r0;
end